--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,43 @@ header ul li a{
     header ul{
         display: none;
     }
+    .toggle{
+        position: relative;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        background: url(/images/menu.png);
+        background-size: 30px;
+        background-position: center;
+        background-repeat: no-repeat;
+        filter: invert(1);
+    }
+    .toggle.active{
+        position: fixed;
+        right: 20px;
+        background: url(/images/close.png);
+        background-size: 25px;
+        background-position: center;
+        background-repeat: no-repeat;
+        z-index: 11;
+    }
+    header ul.navigation.active{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        flex-direction: column;
+        background: #fff;
+        z-index: 10;
+    }
+    header ul li a{
+        font-size: 1.5em;
+        margin: 5px 0;
+    }
     section{
         padding: 20px 20px 120px;
     }
